--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
 <body>
     <div id="header">
         {% block header %}
-	<a href="{% url index %}">{% trans "Home" %}</a> | 
+    <a href="{% url home.views.index as index %}{{ index }}">Cancel</a>
 
 	{% if user.is_authenticated %}
 	{% trans "Logged in" %}: {{ user.username }} 
