--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -2,10 +2,10 @@
 {% load i18n %}
 
 {% block content %}
-<form method="post" action=".">
+<form method="post" action="."> {% csrf_token %}
   {{ form.as_p }}
 
-  <input type="submit" value="{% trans 'Log in' %}" />
+  <input type="submit" value="{% trans 'Log in' %}" />{% csrf_token %}
   <input type="hidden" name="next" value="{{ next }}" />
 </form>
 
