--- a/templates/registration/registration_form.html
+++ b/templates/registration/registration_form.html
@@ -2,9 +2,9 @@
 {% load i18n %}
 
 {% block content %}
-<form method="post" action=".">
+<form method="post" action=".">{% csrf_token %}
   {{ form.as_p }}
 
-  <input type="submit" value="{% trans 'Submit' %}" />
+  <input type="submit" value="{% trans 'Submit' %}" />{% csrf_token %}
 </form>
 {% endblock %}
